installContainer/K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpc-admin
  namespace: dpc
spec:
  rules:
  - host: '||admin_host||'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dpc-admin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpc-api
  namespace: dpc
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: '||api_host||'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dpc-api
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpc-notification-sender
  namespace: dpc
spec:
  rules:
  - host: '||notify_host||'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dpc-notification-sender
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpc-actions-service
  namespace: dpc
spec:
  rules:
  - host: '||actions_host||'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dpc-actions-service
            port:
              number: 80
